weird word spacing in Task List is fixed, buttons are all brown, there's more air between the brown blocks in the User Profile.

--- a/src/app/components/user-profile/user-profile.component.css
+++ b/src/app/components/user-profile/user-profile.component.css
@@ -1,30 +1,25 @@
 #profileImage{
   float:left;
-    border: 5px solid black;
-    padding: 2px;
-    margin:10px;
-    background-color: #3f2914;
-    border-radius: 5px;
-}
-img{
-  height: 10%;
-  width: 10%;
+  border: 5px solid black;
+  padding: 2px;
+  margin:10px;
+  background-color: #3f2914;
   border-radius: 5px;
 }
 
 .grid-container{
-    margin-top: 3em;
-    /* display: inline-grid; */
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5em;
-    border-radius: 5px;
-    border-left: 50px;
-    background-color: #3f2914;
-    text-align: center;
+  margin-top: 3em;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5em;
+  border-radius: 5px;
+  border-left: 50px;
+  background-color: #3f2914;
+  text-align: center;
 }
 
 .container{
-  /* background-color: #3f2914; */
   padding-bottom: 5px;
   border-radius: 5px;
   padding-block-start: 15px;
@@ -38,18 +33,12 @@ img{
 }
 
 .userTask{
-    text-align: center;
-    /* margin-left: 2em */
-    margin: 20px;
-    border: 5px solid black;
-
-    /* border-style: solid; */
-    /* border-radius: 0.5em; */
-    border-radius: 5px;
-    width: 100%;
-    height: 80px;
-    /* background-color: grey; */
-    background-color: #3f2914;
+  margin: 20px;
+  border: 5px solid black;
+  border-radius: 5px;
+  width: 100%;
+  height: 80px;
+  background-color: #3f2914;
 }
 
 h3{
@@ -61,13 +50,16 @@ h3{
   padding-bottom: 5px;
 }
 
+img{
+  height: 10%;
+  width: 10%;
+}
+
 input{
   float: left;
   margin: 10px;
-  /* right:0px; */
 }
 
-/* You get to stay. You're not gross. */
 p{
   margin: auto;
   color: #ffe066;
@@ -77,21 +69,11 @@ p{
   border-radius: 5px;
   text-align: left;
   column-width: 100px;
+  white-space: nowrap;
 }
 
 #catName{
   text-align: left;
-}
-
-#taskDescription{
-  /* margin: auto; */
-  color: #ffe066;
-  background-color: #3f2914;
-  /* padding-left: 15px; */
-  /* padding-top: 1px; */
-  /* border-radius: 5px; */
-  text-align: left;
-  /* column-width: 100px; */
 }
 
 #userStuff{
